# SpaceInvaders

./: .gitignore  CMakeLists.txt  CMakeSettings.json  resources.qrc
game/shaders/sprite/: sprite.frag  sprite.vert
include/spaceinvaders/: application.hpp  color.hpp  game.hpp  shaders.hpp  sprite.hpp  window.hpp
include/spaceinvaders/controllers/: bullet_controller.hpp  player_controller.hpp  saucer_controller.hpp
include/spaceinvaders/sprites/: bullet.hpp  player.hpp  saucer.hpp  text.hpp
include/spaceinvaders/sprites/bullets/: di_bullet.hpp  sharp_bullet.hpp  tri_bullet.hpp
include/spaceinvaders/sprites/saucers/: saucer1.hpp  saucer2.hpp  saucer3.hpp
src/: application.cpp  application.hpp  color.cpp  color.hpp  controller.cpp  controller.hpp  game.cpp  game.hpp  main.cpp  shaders.cpp  shaders.hpp  sprite.cpp  sprite.hpp  window.cpp  window.hpp
src/controllers/: bullet_controller.cpp  bullet_controller.hpp  player_controller.cpp  player_controller.hpp  saucer_controller.cpp  saucer_controller.hpp
src/sprites/: bullet.cpp  bullet.hpp  player.cpp  player.hpp  player_bullet.cpp  player_bullet.hpp  saucer.cpp  saucer.hpp  saucer_types.cpp  saucer_types.hpp  text.cpp  text.hpp
src/sprites/bullets/: di_bullet.cpp  di_bullet.hpp  sharp_bullet.cpp  sharp_bullet.hpp  tri_bullet.cpp  tri_bullet.hpp
src/sprites/saucers/: saucer1.cpp  saucer1.hpp  saucer2.cpp  saucer2.hpp  saucer3.cpp  saucer3.hpp
