# Specify the minimum version for CMake
cmake_minimum_required (VERSION 3.8)

if(${CMAKE_VERSION} VERSION_LESS 3.14)
	cmake_policy(VERSION ${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION})
else()
	cmake_policy(VERSION 3.14)
endif()

# Project name
set(SPACE_INVADERS "SpaceInvaders")
set(SPACE_INVADERS_LIBRARIES "spaceinvaders-1.0")

# C++ version
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project (
	${SPACE_INVADERS}
	VERSION 0.1
	LANGUAGES CXX C
)

# Build directories
set(SPACE_INVADERS_BINARY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set(SPACE_INVADERS_EXECUTABLE_OUTPUT_PATH ${SPACE_INVADERS_BINARY_DIR})
set(SPACE_INVADERS_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${SPACE_INVADERS_BINARY_DIR})
set(SPACE_INVADERS_GAME_FOLDER ${CMAKE_CURRENT_SOURCE_DIR}/game)
set(SPACE_INVADERS_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)

# The following folder will be included
include_directories(${SPACE_INVADERS_SOURCE_DIR} ${SPACE_INVADERS_EXECUTABLE_OUTPUT_PATH})

#qt
find_package(Qt5 COMPONENTS Core Widgets Svg OpenGl REQUIRED)

#boost
find_package(Boost REQUIRED COMPONENTS date_time filesystem system)

file(GLOB SPACE_INVADERS_SOURCES
	${SPACE_INVADERS_SOURCE_DIR}/*.cpp
	${SPACE_INVADERS_SOURCE_DIR}/**/*.cpp
	${SPACE_INVADERS_SOURCE_DIR}/**/**/*.cpp
	${SPACE_INVADERS_SOURCE_DIR}/**/**/**/*.cpp
)

file(GLOB SPACE_INVADERS_HEADERS
	${SPACE_INVADERS_INCLUDE_DIR}/*.hpp
	${SPACE_INVADERS_INCLUDE_DIR}/**/*.hpp
	${SPACE_INVADERS_INCLUDE_DIR}/**/**/*.hpp
	${SPACE_INVADERS_INCLUDE_DIR}/**/**/**/*.hpp
)

QT5_ADD_RESOURCES(SPACE_INVADERS_RESOURCES ${CMAKE_CURRENT_SOURCE_DIR}/resources.qrc)

add_library(${SPACE_INVADERS_LIBRARIES} STATIC
	${SPACE_INVADERS_SOURCES}
	${SPACE_INVADERS_RESOURCES}
)

target_include_directories(${SPACE_INVADERS_LIBRARIES} PUBLIC
	${SPACE_INVADERS_INCLUDE_DIR}
	${Qt5Widgets_INCLUDE_DIRS}
	${Qt5Svg_INCLUDE_DIRS}
	${Qt5OpenGl_INCLUDE_DIRS}
	${Boost_INCLUDE_DIR}
)

target_link_libraries(${SPACE_INVADERS_LIBRARIES} PUBLIC
	${Qt5Widgets_LIBRARIES}
	${Qt5Svg_LIBRARIES}
	${Qt5OpenGl_LIBRARIES}
	${Boost_LIBRARIES}
)

add_executable(${SPACE_INVADERS} ${SPACE_INVADERS_SOURCE_DIR}/main.cpp ${CMAKE_CURRENT_SOURCE_DIR}/resources.qrc)
target_include_directories(${SPACE_INVADERS} PUBLIC
	${SPACE_INVADERS_INCLUDE_DIR}
	${Qt5Widgets_INCLUDE_DIRS}
	${Qt5Svg_INCLUDE_DIRS}
	${Qt5OpenGl_INCLUDE_DIRS}
	${Boost_INCLUDE_DIR}
)

target_link_libraries(${SPACE_INVADERS} PUBLIC
	${SPACE_INVADERS_LIBRARIES}
	${Qt5Widgets_LIBRARIES}
	${Qt5Svg_LIBRARIES}
	${Qt5OpenGl_LIBRARIES}
	${Boost_LIBRARIES}
)

set_property(
	TARGET ${SPACE_INVADERS}
	PROPERTY spaceinvaders_LIBRARIES ${SPACE_INVADERS_LIBRARIES}
)
set_property(
	TARGET ${SPACE_INVADERS}
	PROPERTY spaceinvaders_INCLUDE_DIRS ${SPACE_INVADERS_INCLUDE_DIR}
)